# MH_Skin_Auto_workflows-custom_nodes

./: Auto enhance final2(C4).json  Skin + Auto enhance final.json  Skin enhance final1 (with mask).json  ai_skin_api.json  auto_api.json  general_api.json  outpainting_api.json  photo_api.json  portrait_api.json  skin+auto_api.json  skin_api.json  skin_auto_api.json
ComfyUI-Image-Analysis-Tools/nodes/: blur_detection.py  clipping_analysis.py  color_cast_detector.py  color_harmony_analyzer.py  color_temperature_estimator.py  contrast_analysis.py  defocus_analysis.py  edge_density_analysis.py  entropy_analysis.py  noise_estimation_basic.py  rgb_histogram_renderer.py  sharpness_focus_score.py
ComfyUI_EasySiaze/: __init__.py  nodes.py  presets.py
ComfyUI_ScaleByRatio/: nodes.py  presets.py
a-person-mask-generator-comfyui/: a_person_mask_generator_comfyui.py
custom_nodes/a-person-mask-generator/: .tracking
custom_nodes/comfyui-inspyrenet-rembg/: README.md
custom_nodes/comfyui-kjnodes/nodes/: model_optimization_nodes.py
custom_nodes/promptmodels/: .tracking  LICENSE  README.md  __init__.py  pyproject.toml
custom_nodes/promptmodels/ComfyUI_GoogleAI/: README.md  __init__.py  google_core.py  google_image_node.py  google_text_node.py
custom_nodes/promptmodels/ComfyUI_Grok/: README.md  __init__.py  grok_core.py  grok_image_node.py  grok_text_node.py  requirements.txt
custom_nodes/promptmodels/GETSETNODE_PRO/: README.md
