[project]
name = "promptmodels"
description = "Custom nodes for ComfyUI by PROMPTMODELS. Includes Google Gemini, Grok, Logic Utils, and Conflict-Free Set/Get Nodes."
version = "1.0.6"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "PROMPTMODELS Studio" }]

[project.urls]
Repository = "https://github.com/cdanielp/COMFYUI_PROMPTMODELS"
Documentation = "https://github.com/cdanielp/COMFYUI_PROMPTMODELS/wiki"
"Bug Tracker" = "https://github.com/cdanielp/COMFYUI_PROMPTMODELS/issues"

[tool.comfy]
PublisherId = "promptmodelsstudio"
DisplayName = "PromptModels Studio"
Icon = "https://raw.githubusercontent.com/cdanielp/COMFYUI_PROMPTMODELS/main/prompts%20models%20logo.png"
Includes = [
  "__init__.py",
  "requirements.txt",
  "ComfyUI_GoogleAI",
  "ComfyUI_Grok",
  "GETSETNODE_PRO",
  "DivisorDePrompts",
  "get_last_frame",
  "text_prompt_blocker",
  "comfyui_selectores_pro"
]
